--- a/style.css
+++ b/style.css
@@ -1,4 +1,141 @@
-*{
+* {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    background-color: #ffcb05 ;
+}
+
+header{
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+.header img {
+    width: 120px;
+    margin-bottom: -20px;
+}
+
+header h1 {
+    position: relative;
+    top: 18px;
+    left: 10px;
+    color: black;
+    
+}
+
+header p {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+
+.pokemon-list {
+    background-color: #3c5aa6;
+    border: 1px solid black;
+    padding: 1.50em 1em 1em;
+    border-radius: 25px;
+    position: relative;
+    vertical-align: middle;
+    margin-left: 130px;
+    margin-top: -12px;
+    width: 580px;
+    height: 520px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 0px 0px;
+    row-gap: -30px;
+}
+
+.pokemon-list:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+section h1 {
+    text-align: left;
+    padding-left: 170px;
+    overflow: hidden;
+    position: relative;
+    padding-top: px;
+    z-index: 1;
+}
+
+.search {
+    background-color: #3c5aa6;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+input {
+    height: 100%;
+}
+
+button {
+    width: 30px;
+    height: 100%;
+    border:none;
+    cursor: pointer;
+    background: url('https://api.iconify.design/mdi/pokeball.svg?color=red') no-repeat center center / contain;
+}
+
+button:hover{
+    background: url('https://api.iconify.design/mdi/pokeball.svg?color=blue') no-repeat center center / contain;
+}
+
+
+ul li{
+
+    width: 160px;
+    height: 240px;
+    background-color: green;
+    margin-top: 15px;
+    margin-left: 25px;
+    list-style: none;
+    
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image img {
+    background: url('https://api.iconify.design/mdi/pokeball.svg?color=brown&rotate=180deg') no-repeat center center / contain;
+    width: 150px;
+    height: auto;
+}
+
+#pokemon-list {
+    display: flex;
+    justify-content: center;
+}
+
+.card {
+    border-radius: 10px;
+}
+
+.name {
+    background-color: orange;
+    font-size: 22px;
+    text-align: center;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 5px;
+}
+
+.info span {
+    margin: 10px;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.yellow {
+    background-color: yellow;
 }
